# nasmc

./: .gitignore  LICENSE  README.md  pyproject.toml
nasmc/: datasets.py  filters.py  models.py  nn.py  trainer.py
nasmc/tools/: generate_trajectories.py
