[tool.poetry]
name = "nasmc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fire = "^0.3.1"
torch = "^1.6.0"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
